@@ -35,7 +35,6 @@ import java.io.File;
 import java.io.IOException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
 import java.util.SortedSet;
@@ -49,7 +48,6 @@ import javax.swing.ImageIcon;
 import javax.swing.JComboBox;
 import javax.swing.JComponent;
 import javax.swing.JLabel;
-import javax.swing.JMenu;
 import javax.swing.JPopupMenu;
 import javax.swing.JScrollPane;
 import javax.swing.JTable;
@@ -64,15 +62,15 @@ import javax.swing.event.ListSelectionListener;
 import javax.swing.table.TableCellRenderer;
 import javax.swing.table.TableColumn;
 
+import org.apache.log4j.Logger;
+
 import com.orange.atk.atkUI.anaScript.JatkCampaign;
 import com.orange.atk.atkUI.anaScript.JatkStep;
-import com.orange.atk.atkUI.anaScript.JatkStepAnalysisResult;
 import com.orange.atk.atkUI.corecli.Campaign;
 import com.orange.atk.atkUI.corecli.Configuration;
 import com.orange.atk.atkUI.corecli.Step;
-import com.orange.atk.atkUI.corecli.StepAnalysisResult;
 import com.orange.atk.atkUI.corecli.Step.Verdict;
-import com.orange.atk.atkUI.corecli.utils.Out;
+import com.orange.atk.atkUI.corecli.StepAnalysisResult;
 import com.orange.atk.atkUI.corecli.utils.StringUtilities;
 import com.orange.atk.atkUI.coregui.CheckListTable;
 import com.orange.atk.atkUI.coregui.CheckListTableModel;
@@ -84,64 +82,52 @@ import com.orange.atk.atkUI.guiScript.actions.JatkGUIAction;
 import com.orange.atk.phone.PhoneInterface;
 import com.orange.atk.phone.detection.AutomaticPhoneDetection;
 
-
-
 /**
- *
+ * 
  * @author Aurore PENAULT
  * @since JDK5.0
  */
 public class JatkCheckListTable extends CheckListTable {
+
+	private static final int TOOLTIP_DISMISS_AFTER = 10000; // 10sec
 
 	/**
 	 * 
 	 */
 	private static final long serialVersionUID = 1L;
 
-	//First columns defined in CheckListTable
-	public static final int COLUMN_COMMENTS = COLUMN_VERDICT + 1;
-	public static final int COLUMN_SCREENSHOT = COLUMN_COMMENTS + 1;
+	// First columns defined in CheckListTable
+	static final int COLUMN_COMMENTS = COLUMN_VERDICT + 1;
+	static final int COLUMN_SCREENSHOT = COLUMN_COMMENTS + 1;
 
-	public static final int COLUMN_ANALYSER = COLUMN_SCREENSHOT + 1;
-	public static final int NUMBER_OF_COLUMN = COLUMN_ANALYSER;
+	private static final int NUMBER_OF_COLUMN = COLUMN_SCREENSHOT;
 
-	private Object[] longValues = {"1000",
-			"ALongWordForAFlashFile.swf",
-			"Config file",
-			"*",
-			"Passed***",
-			"A long comment",
-	"Analyse"};
+	private Object[] longValues = {"1000", "ALongWordForAFlashFile.swf", "Config file", "*",
+			"Passed***", "A long comment", "Analyse"};
 
-	boolean completeView = false;
+	private boolean completeView = false;
 
-	//	-- Table management --
+	// -- Table management --
 	private TableColumn screenShotsColumn;
-	private TableColumn analyserColumn;
 	private TableColumn commentsColumn;
-
-
-	static public JMenu submenuLaunchInExternalTool;
 
 	/**
 	 * Builds and initialize a new CheckList Table for Flash content.
-	 *
+	 * 
 	 */
 	@SuppressWarnings("serial")
 	public JatkCheckListTable() {
 		super();
 		campaign = new JatkCampaign();
 
-
-		ToolTipManager.sharedInstance().setDismissDelay(10000); //10sec
+		ToolTipManager.sharedInstance().setDismissDelay(TOOLTIP_DISMISS_AFTER);
 
 		model = new FlashCheckListTableModel();
 		model.setLongValues(longValues);
-		//table = new JTable(model){
 		table = new JTable(model) {
-			public boolean getScrollableTracksViewportHeight(){
-				if (getParent() instanceof JViewport){
-					return (((JViewport)getParent()).getHeight() > getPreferredSize().height);
+			public boolean getScrollableTracksViewportHeight() {
+				if (getParent() instanceof JViewport) {
+					return (((JViewport) getParent()).getHeight() > getPreferredSize().height);
 				}
 				return false;
 			}
@@ -154,7 +140,6 @@ public class JatkCheckListTable extends CheckListTable {
 		table.setDragEnabled(true);
 		table.setTransferHandler(new MyTransfertHandler());
 
-
 		table.setPreferredScrollableViewportSize(new Dimension(500, 200));
 		tablePane = new JScrollPane(table);
 
@@ -165,18 +150,17 @@ public class JatkCheckListTable extends CheckListTable {
 		model.addColumn("Verdict");
 		model.addColumn("Comments");
 		model.addColumn("ScreenShots Comparison");
-		model.addColumn("Analyser");
 
 		constructTable();
 
-		//Set up column sizes.
+		// Set up column sizes.
 		model.initColumnSizes(model, table, NUMBER_OF_COLUMN);
 
 		setRenderer();
 
 		table.setRowHeight(25);
 
-		//table.setSelectionMode(ListSelectionModel.MULTIPLE_INTERVAL_SELECTION);
+		// table.setSelectionMode(ListSelectionModel.MULTIPLE_INTERVAL_SELECTION);
 		ListSelectionModel rowSM = table.getSelectionModel();
 		rowSM.addListSelectionListener(new ListSelectionListener() {
 			public void valueChanged(ListSelectionEvent e) {
@@ -186,44 +170,43 @@ public class JatkCheckListTable extends CheckListTable {
 
 		givePopupMenuToTable(table);
 
-
 		this.setLayout(new BorderLayout());
 		this.add(BorderLayout.CENTER, tablePane);
-		this.setBorder(BorderFactory.createEmptyBorder(20,10,10,10));
+		this.setBorder(BorderFactory.createEmptyBorder(20, 10, 10, 10));
 
 	}
 
 	/**
 	 * Associates a popup menu to a table.
-	 * @param table the target table
+	 * 
+	 * @param table
+	 *            the target table
 	 */
-	public void givePopupMenuToTable(JTable table) {
+	private void givePopupMenuToTable(JTable table) {
 		JPopupMenu popUp = createTablePopUp();
-		table.addMouseListener(new JatkMouseListener(popUp,this));
+		table.addMouseListener(new JatkMouseListener(popUp, this));
 	}
 
 	/**
 	 * Creates the popup menu.
+	 * 
 	 * @return the popup menu
 	 */
 	private JPopupMenu createTablePopUp() {
 		JPopupMenu popup = new JPopupMenu();
 
-		submenuLaunchInExternalTool = new JMenu("Run external tool");
-		submenuLaunchInExternalTool.setToolTipText("Launch an external tool one the selected step");
-		//	initLaunchExternalTool();
-
-		popup.add(JatkGUIAction.ANALYSESELECTIONFLASH.getAsMenuItem("Launch selection"));
+		popup.add(JatkGUIAction.ANALYSESELECTEDTASKS.getAsMenuItem("Launch selection"));
+		popup.add(MatosAction.VIEWANALYZER.getAsMenuItem("Analyzer"));
 		popup.add(MatosAction.VIEWREPORT.getAsMenuItem("Open latest report"));
-		popup.add(JatkGUIAction.SETSCREENSHOTREFERENCEDIR.getAsMenuItem("Set Reference Screenshots"));
-		//popup.add(submenuLaunchInExternalTool);
+		popup.add(JatkGUIAction.SETSCREENSHOTREFERENCEDIR
+				.getAsMenuItem("Set Reference Screenshots"));
 		popup.addSeparator();
 		popup.add(MatosAction.COPY.getAsMenuItem("Copy"));
 		popup.add(MatosAction.PASTE.getAsMenuItem("Paste under"));
 		popup.add(MatosAction.REMOVE.getAsMenuItem("Remove"));
 		popup.addSeparator();
-		//popup.add(MatosAction.CONFIRMVERDICT.getAsMenuItem("Confirm the verdict"));
-		//popup.add(MatosAction.MODIFYVERDICT.getAsMenuItem("Modify the verdict"));
+		// popup.add(MatosAction.CONFIRMVERDICT.getAsMenuItem("Confirm the verdict"));
+		// popup.add(MatosAction.MODIFYVERDICT.getAsMenuItem("Modify the verdict"));
 		popup.addSeparator();
 		popup.add(MatosAction.PROPERTIES.getAsMenuItem("Properties..."));
 
@@ -240,14 +223,13 @@ public class JatkCheckListTable extends CheckListTable {
 		nbStepColumn.setMaxWidth(70);
 		nbStepColumn.setCellRenderer(nbStepRenderer);
 
-		flashfileColumn= table.getColumnModel().getColumn(COLUMN_TESTNAME);
+		flashfileColumn = table.getColumnModel().getColumn(COLUMN_TESTNAME);
 		GeneralRenderer flashRenderer = new GeneralRenderer();
 		flashfileColumn.setCellRenderer(flashRenderer);
 
-
 		phoneconfigColumn = table.getColumnModel().getColumn(COLUMN_PHONECONFIG);
 		phoneconfigColumn.setCellEditor(new DefaultCellEditor(comboBoxPhoneConfig));
-		JATKcomboBoxListener comboBoxListener = new JATKcomboBoxListener(comboBoxPhoneConfig,this);
+		JATKcomboBoxListener comboBoxListener = new JATKcomboBoxListener(comboBoxPhoneConfig, this);
 		comboBoxPhoneConfig.addActionListener(comboBoxListener);
 		comboBoxPhoneConfig.addMouseListener(comboBoxListener);
 
@@ -264,32 +246,26 @@ public class JatkCheckListTable extends CheckListTable {
 		commentsColumn = table.getColumnModel().getColumn(COLUMN_COMMENTS);
 		GeneralRenderer commentsRenderer = new GeneralRenderer();
 		commentsColumn.setCellRenderer(commentsRenderer);
-		screenShotsColumn= table.getColumnModel().getColumn(COLUMN_SCREENSHOT);
+		screenShotsColumn = table.getColumnModel().getColumn(COLUMN_SCREENSHOT);
 		GeneralRenderer screenShotsRenderer = new GeneralRenderer();
 		screenShotsColumn.setCellRenderer(screenShotsRenderer);
-
-		analyserColumn= table.getColumnModel().getColumn(COLUMN_ANALYSER);
-		GeneralRenderer AnalyserRenderer = new GeneralRenderer();
-		analyserColumn.setCellRenderer(AnalyserRenderer);
-
 	}
-
 
 	public JComboBox getComboBoxPhoneConfig() {
 		return comboBoxPhoneConfig;
 	}
 
-	/**Implémentation De transfertHandler correspondant à la JTable.
-	 *
+	/**
+	 * Implémentation De transfertHandler correspondant à la JTable.
+	 * 
 	 * @author
-	 *
+	 * 
 	 */
 	static class MyTransfertHandler extends TransferHandler {
 		/**
 		 * 
 		 */
 		private static final long serialVersionUID = 1L;
-
 
 		@Override
 		public int getSourceActions(JComponent c) {
@@ -299,12 +275,13 @@ public class JatkCheckListTable extends CheckListTable {
 
 		private static final String URI_LIST_MIME_TYPE = "text/uri-list;class=java.lang.String";
 
-
 		@Override
 		protected Transferable createTransferable(JComponent c) {
 
-			// on récupère la donnée qui nous intéresse (c'est a dire l'emplacement de la ligne que l'on veut bouger)
-			//Puis on l'enveloppe dans un Objet héritant de transferable. (une StringSelection en l'occurence)
+			// on récupère la donnée qui nous intéresse (c'est a dire
+			// l'emplacement de la ligne que l'on veut bouger)
+			// Puis on l'enveloppe dans un Objet héritant de transferable. (une
+			// StringSelection en l'occurence)
 			JTable t = (JTable) c;
 			StringSelection s = new StringSelection(String.valueOf(t.getSelectedRow()));
 			return s;
@@ -313,28 +290,26 @@ public class JatkCheckListTable extends CheckListTable {
 		public boolean canImport(TransferHandler.TransferSupport info) {
 
 			// pour ne gérer que le drop et pas le paste
-			//if (!info.isDrop()) {
-			//      return false;
-			//  }
+			// if (!info.isDrop()) {
+			// return false;
+			// }
 
-
-			if(Campaign.isExecute())
+			if (Campaign.isExecute()) {
 				return false;
+			}
 
 			// On ne supporte que les string et les file en entree
-			if (!((info.isDataFlavorSupported(DataFlavor.stringFlavor))||(info.isDataFlavorSupported(DataFlavor.javaFileListFlavor)))) {
+			if (!((info.isDataFlavorSupported(DataFlavor.stringFlavor)) || (info
+					.isDataFlavorSupported(DataFlavor.javaFileListFlavor)))) {
 				return false;
 			}
 
 			// On recherche l'emplacement du drop
-			JTable.DropLocation dl = (JTable.DropLocation)info.getDropLocation();
+			JTable.DropLocation dl = (JTable.DropLocation) info.getDropLocation();
 
 			// On ne supporte que les emplacements de drop valides
 			return dl.getDropPoint() != null;
 		}
-
-
-
 
 		public boolean importData(TransferHandler.TransferSupport info) {
 			// dans le cas ou l'on ne pourrait supporter l'import
@@ -349,46 +324,42 @@ public class JatkCheckListTable extends CheckListTable {
 			try {
 				uriListFlavor = new DataFlavor(URI_LIST_MIME_TYPE);
 			} catch (ClassNotFoundException e) {
-				e.printStackTrace();
+				Logger.getLogger(this.getClass()).error(e);
 			}
 
 			try {
 				Vector<File> dd_flashPathVect = new Vector<File>();
 				// 1. get back files
-				if (transferable.isDataFlavorSupported(DataFlavor.javaFileListFlavor)) { // windows's way 
-					List<File> list = (List<File>) transferable.getTransferData(DataFlavor.javaFileListFlavor);
+				if (transferable.isDataFlavorSupported(DataFlavor.javaFileListFlavor)) { // windows's
+																							// way
+					List<File> list = (List<File>) transferable
+							.getTransferData(DataFlavor.javaFileListFlavor);
 					Iterator<File> it = list.iterator();
-					while (it.hasNext()){
+					while (it.hasNext()) {
 						File f = it.next();
-						String extension=".tst";
+						String extension = ".tst";
 
-						if(AutomaticPhoneDetection.getInstance()
-								.isNokia())
-							extension=".xml";	
-						if (f.getAbsolutePath().endsWith(extension)){
+						if (f.getAbsolutePath().endsWith(extension)) {
 							dd_flashPathVect.add(new File(f.getAbsolutePath()));
 						}
 					}
 
-				} else if (transferable.isDataFlavorSupported(uriListFlavor)) { // gnome & KDE's way
-					String s = (String)transferable.getTransferData(uriListFlavor);
-					String [] uris = s.split(System.getProperty("line.separator"));
-					for (int i=0; i<uris.length; i++){
-						if (uris[i].trim().length()>0) {
+				} else if (transferable.isDataFlavorSupported(uriListFlavor)) {
+					String s = (String) transferable.getTransferData(uriListFlavor);
+					String[] uris = s.split(System.getProperty("line.separator"));
+					for (int i = 0; i < uris.length; i++) {
+						if (uris[i].trim().length() > 0) {
 							File f = new File(new URI(uris[i].trim()));
-							String extension=".tst";
+							String extension = ".tst";
 
-							if(AutomaticPhoneDetection.getInstance()
-									.isNokia())
-								extension=".xml";	
-							if (f.exists() && f.getAbsolutePath().endsWith(extension)){
+							if (f.exists() && f.getAbsolutePath().endsWith(extension)) {
 								dd_flashPathVect.add(new File(f.getAbsolutePath()));
 							}
 						}
 					}
 				} else {
 					// On récupère l'emplacement du Drop
-					JTable.DropLocation dl = (JTable.DropLocation)info.getDropLocation();
+					JTable.DropLocation dl = (JTable.DropLocation) info.getDropLocation();
 
 					// On récupère la ligne de destinatop du drop
 					int dstRow = dl.getRow();
@@ -396,17 +367,18 @@ public class JatkCheckListTable extends CheckListTable {
 					// on récupère l'objet de transfert
 					Transferable trans = info.getTransferable();
 
-					// On récupère la donnée utile depuis l'objet de transfert (l'emplacement d'origine de la ligne à bouger)
+					// On récupère la donnée utile depuis l'objet de
+					// transfert (l'emplacement d'origine de la ligne à
+					// bouger)
 					try {
 						trans.getTransferData(DataFlavor.stringFlavor);
 					} catch (UnsupportedFlavorException e) {
-						e.printStackTrace();
+						Logger.getLogger(this.getClass()).error(e);
 						return false;
 					} catch (IOException e) {
-						e.printStackTrace();
+						Logger.getLogger(this.getClass()).error(e);
 						return false;
 					}
-
 
 					// on effectue les modifications sur la JTable
 					JTable table = (JTable) info.getComponent();
@@ -415,30 +387,28 @@ public class JatkCheckListTable extends CheckListTable {
 					if (dstRow < 0) {
 						dstRow = 0;
 					}
-					if (dstRow > m.getRowCount()-1) {
-						dstRow = m.getRowCount()-1;
+					if (dstRow > m.getRowCount() - 1) {
+						dstRow = m.getRowCount() - 1;
 					}
 
-					SortedSet <Integer> campaignIndexRemovedRows = new TreeSet<Integer>();
+					SortedSet<Integer> campaignIndexRemovedRows = new TreeSet<Integer>();
 					int[] temp = table.getSelectedRows();
 
-					for(int i=0;i<temp.length;i++)
-					{
-						campaignIndexRemovedRows.add(temp[i]);  
+					for (int i = 0; i < temp.length; i++) {
+						campaignIndexRemovedRows.add(temp[i]);
 					}
 
 					m.moveRow(campaignIndexRemovedRows, dstRow);
 					return true;
 				}
 
-				JTable.DropLocation dl = (JTable.DropLocation)info.getDropLocation();
+				JTable.DropLocation dl = (JTable.DropLocation) info.getDropLocation();
 
 				// On récupère la ligne de destinatop du drop
 				dl.getRow();
 
-
-				// 2. add droped files into the check list 
-				if (dd_flashPathVect.size()>0) {
+				// 2. add droped files into the check list
+				if (dd_flashPathVect.size() > 0) {
 					Campaign tmpCamp = new Campaign();
 					Iterator<File> itSWF = dd_flashPathVect.iterator();
 					while (itSWF.hasNext()) {
@@ -447,34 +417,25 @@ public class JatkCheckListTable extends CheckListTable {
 						JatkStep flashStep = new JatkStep(swfPath, swfFile);
 						tmpCamp.add(flashStep);
 					}
-					new LoadCheckListTask(CoreGUIPlugin.mainFrame.statusBar, tmpCamp, -1, false, tmpCamp.size());
-
+					new LoadCheckListTask(CoreGUIPlugin.mainFrame.statusBar, tmpCamp, -1, false,
+							tmpCamp.size());
 
 					return true;
 				}
 
 			} catch (UnsupportedFlavorException e) {
-				// TODO Auto-generated catch block
-				e.printStackTrace();
+				Logger.getLogger(this.getClass()).error(e);
 			} catch (IOException e) {
-				// TODO Auto-generated catch block
-				e.printStackTrace();
+				Logger.getLogger(this.getClass()).error(e);
 			} catch (URISyntaxException e) {
-				// TODO Auto-generated catch block
-				e.printStackTrace();
+				Logger.getLogger(this.getClass()).error(e);
 			}
-
 
 			return false;
 
-
 		}
 
-
 	}
-
-
-
 
 	/**
 	 * The renderer for this check-list table.
@@ -485,11 +446,11 @@ public class JatkCheckListTable extends CheckListTable {
 		 * 
 		 */
 		private static final long serialVersionUID = 1L;
-		private	ImageIcon[]	suitImages;
+		private ImageIcon[] suitImages;
 
 		/**
 		 * Creates the renderer.
-		 *
+		 * 
 		 */
 		public GeneralRenderer() {
 			setOpaque(true);
@@ -497,80 +458,78 @@ public class JatkCheckListTable extends CheckListTable {
 			java.net.URL passedURL = CoreGUIPlugin.getIconURL("tango/apply.png");
 			java.net.URL failedURL = CoreGUIPlugin.getIconURL("tango/messagebox_warning.png");
 			java.net.URL skippedURL = CoreGUIPlugin.getIconURL("tango/cache.png");
-			suitImages[0] = new ImageIcon( passedURL, Step.verdictAsString.get(Verdict.PASSED));
-			suitImages[1] = new ImageIcon( failedURL, Step.verdictAsString.get(Verdict.FAILED));
-			suitImages[2] = new ImageIcon( skippedURL, Step.verdictAsString.get(Verdict.SKIPPED));
-			suitImages[3] = new ImageIcon( failedURL, Step.verdictAsString.get(Verdict.INITFAILED));
-			suitImages[4] = new ImageIcon( failedURL, Step.verdictAsString.get(Verdict.TESTFAILED));
+			suitImages[0] = new ImageIcon(passedURL, Step.verdictAsString.get(Verdict.PASSED));
+			suitImages[1] = new ImageIcon(failedURL, Step.verdictAsString.get(Verdict.FAILED));
+			suitImages[2] = new ImageIcon(skippedURL, Step.verdictAsString.get(Verdict.SKIPPED));
+			suitImages[3] = new ImageIcon(failedURL, Step.verdictAsString.get(Verdict.INITFAILED));
+			suitImages[4] = new ImageIcon(failedURL, Step.verdictAsString.get(Verdict.TESTFAILED));
 
 		}
 
 		/**
 		 * Gets the renderer for each cell of the table.
 		 */
-		public Component getTableCellRendererComponent(JTable table, Object color, boolean isSelected, boolean hasFocus, int row, int column) {
+		public Component getTableCellRendererComponent(JTable table, Object color,
+				boolean isSelected, boolean hasFocus, int row, int column) {
 			if (isSelected) {
 				this.setBackground(table.getSelectionBackground());
 			} else {
-				if (column == COLUMN_TESTNAME){
-					this.setBackground(new Color(253,245,230));
-				}else{
+				if (column == COLUMN_TESTNAME) {
+					this.setBackground(new Color(253, 245, 230));
+				} else {
 					this.setBackground(table.getBackground());
 				}
 			}
 			try {
-				this.setText((String)model.getValueAt(row, column));
-				int	numRow = new Integer((String)model.getValueAt(row, COLUMN_NBROW)).intValue() - 1;
-				if (column == COLUMN_TESTNAME){
-					this.setToolTipText((String)toolTipFlashFile.get(numRow));
+				this.setText((String) model.getValueAt(row, column));
+				int numRow = Integer.valueOf((String) model.getValueAt(row, COLUMN_NBROW)) - 1;
+				if (column == COLUMN_TESTNAME) {
+					this.setToolTipText((String) toolTipFlashFile.get(numRow));
 				}
-				if (column == COLUMN_MODIFIED){
-					this.setToolTipText((String)toolTipModified.get(numRow));
+				if (column == COLUMN_MODIFIED) {
+					this.setToolTipText((String) toolTipModified.get(numRow));
 					this.setHorizontalAlignment(JLabel.CENTER);
 				}
-				if (column == COLUMN_VERDICT){
-					this.setToolTipText((String)toolTipReport.get(numRow));
+				if (column == COLUMN_VERDICT) {
+					this.setToolTipText((String) toolTipReport.get(numRow));
 					Verdict verdict = Verdict.NONE;
 					Verdict userVerdict = Verdict.NONE;
-					if (numRow<campaign.size()) {
-						verdict = ((Step)campaign.get(numRow)).getVerdict();
-						userVerdict = ((Step)campaign.get(numRow)).getUserVerdict();
+					if (numRow < campaign.size()) {
+						verdict = ((Step) campaign.get(numRow)).getVerdict();
+						userVerdict = ((Step) campaign.get(numRow)).getUserVerdict();
 					}
 					if (userVerdict != Verdict.NONE) {
-						if (userVerdict == Verdict.PASSED){
+						if (userVerdict == Verdict.PASSED) {
 							this.setIcon(suitImages[0]);
-						}else if (userVerdict == Verdict.FAILED){
+						} else if (userVerdict == Verdict.FAILED) {
 							this.setIcon(suitImages[1]);
-						}else if (userVerdict == Verdict.SKIPPED){
+						} else if (userVerdict == Verdict.SKIPPED) {
 							this.setIcon(suitImages[2]);
 						}
 					} else {
-						if (verdict == Verdict.PASSED){
+						if (verdict == Verdict.PASSED) {
 							this.setIcon(suitImages[0]);
-						}else if (verdict == Verdict.FAILED){
+						} else if (verdict == Verdict.FAILED) {
 							this.setIcon(suitImages[1]);
-						}else if (verdict == Verdict.SKIPPED){
+						} else if (verdict == Verdict.SKIPPED) {
 							this.setIcon(suitImages[2]);
-						}else if (verdict == Verdict.NONE){
+						} else if (verdict == Verdict.NONE) {
 							this.setIcon(null);
 						} else {
 							this.setIcon(null);
 						}
 					}
-					if (userVerdict == verdict && verdict != Verdict.NONE){
+					if (userVerdict == verdict && verdict != Verdict.NONE) {
 						this.setBackground(new Color(224, 238, 224));
-					}else if (userVerdict != verdict && userVerdict != Verdict.NONE){
+					} else if (userVerdict != verdict && userVerdict != Verdict.NONE) {
 						this.setBackground(new Color(238, 213, 210));
 					}
-					if (verdict == Verdict.SKIPPED){
+					if (verdict == Verdict.SKIPPED) {
 						this.setBackground(new Color(255, 250, 205));
 					}
 				}
-				if (column == COLUMN_PHONECONFIG){
-
-				}
-				if (column == COLUMN_COMMENTS){
-					this.setToolTipText((String)model.getValueAt(row, column));
+				if (column == COLUMN_COMMENTS) {
+					this.setToolTipText((String) model.getValueAt(row, column));
 
 					table.getCellEditor(row, column).addCellEditorListener(
 							new CellEditorListener() {
@@ -578,329 +537,140 @@ public class JatkCheckListTable extends CheckListTable {
 								}
 								public void editingStopped(ChangeEvent e) {
 									int row = JatkCheckListTable.this.table.getSelectedRow();
-									Step c = (Step)campaign.get(row);
-									c.setUserComment((String)model.getValueAt(row, COLUMN_COMMENTS));
+									Step c = (Step) campaign.get(row);
+									c.setUserComment((String) model
+											.getValueAt(row, COLUMN_COMMENTS));
 								}
 							});
 				}
-				if (column == COLUMN_SCREENSHOT){
-					//					JButton button =new JButton("OK");
-					//					
+				if (column == COLUMN_SCREENSHOT) {
 
-					this.setToolTipText((String)toolTipReport.get(numRow));
+					this.setToolTipText((String) toolTipReport.get(numRow));
 					Verdict screenshotVerdict = Verdict.NONE;
 					Verdict verdict = Verdict.NONE;
 
-					if (numRow<campaign.size()) {
-						screenshotVerdict = ((Step)campaign.get(numRow)).getScreenshotVerdict();
-						verdict = ((Step)campaign.get(numRow)).getVerdict();
+					if (numRow < campaign.size()) {
+						screenshotVerdict = ((Step) campaign.get(numRow)).getScreenshotVerdict();
+						verdict = ((Step) campaign.get(numRow)).getVerdict();
 
 					}
 					if (screenshotVerdict != Verdict.NONE) {
-						if (screenshotVerdict == Verdict.PASSED){
+						if (screenshotVerdict == Verdict.PASSED) {
 							this.setIcon(suitImages[0]);
-						}else if (screenshotVerdict == Verdict.FAILED){
+						} else if (screenshotVerdict == Verdict.FAILED) {
 							this.setIcon(suitImages[1]);
-						}else if (screenshotVerdict == Verdict.SKIPPED){
+						} else if (screenshotVerdict == Verdict.SKIPPED) {
 							this.setIcon(suitImages[2]);
 						}
-					}else{
-						this.setIcon(new ImageIcon(CoreGUIPlugin.getIconURL("tango/camera_icon.png"), "Launch ScreenShot Comparison"));
+					} else {
+						this.setIcon(new ImageIcon(CoreGUIPlugin
+								.getIconURL("tango/camera_icon.png"),
+								"Launch ScreenShot Comparison"));
 
 					}
 
-					if (verdict == Verdict.SKIPPED){
+					if (verdict == Verdict.SKIPPED) {
 						this.setBackground(new Color(255, 250, 205));
-					}					
-					//					button.addMouseListener(new MouseListener(){
-					//
-					//						public void mouseClicked(MouseEvent arg0) {
-					//						 Logger.getLogger(this.getClass() ).debug("mouse clik");
-					//						 if(arg0.getClickCount() == 1)
-					//						   {
-					//							 launchScreenShotComparison compScreenShot= new launchScreenShotComparison("C:\\Documents and Settings\\bvqj2105\\workspace\\prototype\\src\\images\\ref1","C:\\Documents and Settings\\bvqj2105\\workspace\\prototype\\src\\images\\test1");
-					//						   }
-					//						}
-					//
-					//						public void mousePressed(MouseEvent arg0) {
-					//							Logger.getLogger(this.getClass() ).debug("mouse pressed");
-					//						}
-					//
-					//						public void mouseReleased(MouseEvent arg0) {
-					//
-					//						}
-					//
-					//						public void mouseEntered(MouseEvent arg0) {
-					//
-					//						}
-					//
-					//						public void mouseExited(MouseEvent arg0) {
-					//
-					//						}
-					//
-					//					});
-					//					button.setVisible(true);
-					//					this.add(button);
-
-					//					 GeneralRenderer buttonColumn = new GeneralRenderer();
+					}
 				}
-
-				if (column == COLUMN_ANALYSER){
-					this.setIcon(new ImageIcon(CoreGUIPlugin.getIconURL("tango/analyser.png"), "Launch Analyser"));
-				}
-				if (completeView){
-					if (column == COLUMN_COMMENTS){
+				if (completeView) {
+					if (column == COLUMN_COMMENTS) {
 						this.setBorder(BorderFactory.createMatteBorder(0, 0, 0, 1, Color.BLACK));
 					}
 				}
 				return this;
 			} catch (ArrayIndexOutOfBoundsException ae) {
-				// throwed when table is modified (cleared,...) and repainted at same time...
+				// throwed when table is modified (cleared,...) and repainted at
+				// same time...
 				// when numRow becomes > nb row in table
-				//ae.printStackTrace(Out.log);
+				Logger.getLogger(this.getClass()).error("error", ae);
 			} catch (NumberFormatException nfe) {
-				// case numRow retriving get a null (see overwritten method MyTableModel.getValueAt(..))
-				//nfe.printStackTrace(Out.log);
+				// case numRow retriving get a null (see overwritten method
+				// MyTableModel.getValueAt(..))
+				Logger.getLogger(this.getClass()).error("error", nfe);
 			}
 			return null;
 		}
 	}
 
-	//	 class ButtonRenderer extends AbstractCellEditor
-	//     implements TableCellRenderer, TableCellEditor, ActionListener
-	// {
-	//     JTable table;
-	//     JButton renderButton;
-	//     JButton editButton;
-	//     String text;
-	//	private int nbclick=0;
-	//
-	//     public ButtonRenderer(JTable table, int column)
-	//     {
-	//         super();
-	//         this.table = table;
-	//         renderButton = new JButton("render");
-	//         //renderButton.addActionListener( this );
-	//         editButton = new JButton("edit");
-	//         editButton.setFocusPainted( false );
-	//        // editButton.addActionListener( this );
-	//
-	//         TableColumnModel columnModel = table.getColumnModel();
-	//         columnModel.getColumn(column).setCellRenderer( this );
-	//         columnModel.getColumn(column).setCellEditor( this );
-	//     }
-	//
-	//     public Component getTableCellRendererComponent(
-	//         JTable table, Object value, boolean isSelected, boolean hasFocus, int row, int column)
-	//     {
-	//         if (hasFocus)
-	//         {
-	//             renderButton.setForeground(table.getForeground());
-	//             renderButton.setBackground(UIManager.getColor("Button.background"));
-	//         }
-	//         else if (isSelected)
-	//         {
-	//             renderButton.setForeground(table.getSelectionForeground());
-	//              renderButton.setBackground(table.getSelectionBackground());
-	//              Logger.getLogger(this.getClass() ).debug("isselected"+row+","+column);
-	////             
-	////              if (nbclick>0){
-	////            	  launchScreenShotComparison compScreenShot= new launchScreenShotComparison("C:\\Documents and Settings\\bvqj2105\\workspace\\prototype\\src\\images\\ref1","C:\\Documents and Settings\\bvqj2105\\workspace\\prototype\\src\\images\\test1");
-	////              } nbclick++;
-	//         }
-	//         else
-	//         {
-	//             renderButton.setForeground(table.getForeground());
-	//             renderButton.setBackground(UIManager.getColor("Button.background"));
-	//         }
-	//
-	//         //renderButton.setText( (value == null) ? "" : value.toString() );
-	//         java.net.URL passedURL = CoreGUIPlugin.getIconURL("tango/apply.png");
-	//			
-	//         renderButton.setIcon(new ImageIcon( passedURL, Step.verdictAsString.get(Verdict.PASSED)));
-	////         renderButton.addMouseListener(new MouseListener(){
-	////
-	////						public void mouseClicked(MouseEvent arg0) {
-	////						 Logger.getLogger(this.getClass() ).debug("mouse clik");
-	////						 if(arg0.getClickCount() == 1)
-	////						   {
-	////							 launchScreenShotComparison compScreenShot= new launchScreenShotComparison("C:\\Documents and Settings\\bvqj2105\\workspace\\prototype\\src\\images\\ref1","C:\\Documents and Settings\\bvqj2105\\workspace\\prototype\\src\\images\\test1");
-	////						   }
-	////						}
-	////
-	////						public void mousePressed(MouseEvent arg0) {
-	////							Logger.getLogger(this.getClass() ).debug("mouse pressed");
-	////						}
-	////
-	////						public void mouseReleased(MouseEvent arg0) {
-	////
-	////						}
-	////
-	////						public void mouseEntered(MouseEvent arg0) {
-	////
-	////						}
-	////
-	////						public void mouseExited(MouseEvent arg0) {
-	////
-	////						}
-	////
-	////					});
-	//         return renderButton;
-	//     }
-	//
-	//     public Component getTableCellEditorComponent(
-	//         JTable table, Object value, boolean isSelected, int row, int column)
-	//     {
-	//         text = (value == null) ? "" : value.toString();
-	//         editButton.setText( text );
-	//         return editButton;
-	//     }
-	//
-	//     public Object getCellEditorValue()
-	//     {
-	//         return text;
-	//     }
-	//
-	//     public void actionPerformed(ActionEvent e)
-	//     {
-	//         fireEditingStopped();
-	//         Logger.getLogger(this.getClass() ).debug( e.getActionCommand() + " : " + table.getSelectedRow());
-	//     }
-	// }
-
-	/* (non-Javadoc)
-	 * @see com.orange.atk.atkUI.coregui.CheckListTable#addRow(com.orange.atk.atkUI.corecli.Step, int, boolean, boolean)
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see
+	 * com.orange.atk.atkUI.coregui.CheckListTable#addRow(com.orange.atk.atkUI
+	 * .corecli.Step, int, boolean, boolean)
 	 */
 	@Override
-	public void addRow(Step step, int rowNumberInGUI, boolean selectIt,	boolean checkPreviousResults) {
+	public void addRow(Step step, int rowNumberInGUI, boolean selectIt, boolean checkPreviousResults) {
 		if (!(step instanceof JatkStep)) {
-			//Out.log.println("addRow(..): Warning, trying to add a non FlashStep into FlashCheckListTable... step skipped.");
+			// Out.log.println("addRow(..): Warning, trying to add a non FlashStep into FlashCheckListTable... step skipped.");
 			return;
 		}
-		JatkStep flashStep = (JatkStep)step;
+		JatkStep flashStep = (JatkStep) step;
 		String flashURI = flashStep.getFlashFilePath();
 		String flashName = "";
 		if (flashURI.endsWith("tst")) {
 			flashName = StringUtilities.guessName(flashURI, "tst");
-		} else {//.sis
+		} else {// .sis
 			flashName = StringUtilities.guessName(flashURI, "xml");
 		}
-		String numRowInNumbers=null;
+		String numRowInNumbers = null;
 		Vector<String> rowData = new Vector<String>();
-		if (rowNumberInGUI == -1){
+		if (rowNumberInGUI == -1) {
 			rowNumberInGUI = model.getRowCount();
 		}
 
-		if(model.getRowCount()==0)
-			rowNumberInGUI=	table.getRowCount();
-		//String numRowInNumbers = Integer.valueOf(table.getRowCount()+1).toString();
-		numRowInNumbers = Integer.valueOf(rowNumberInGUI+1).toString();
+		if (model.getRowCount() == 0)
+			rowNumberInGUI = table.getRowCount();
+		numRowInNumbers = Integer.valueOf(rowNumberInGUI + 1).toString();
 
 		int numRowInCampaign = campaign.size();
-		rowData.add(numRowInNumbers);//rowNumber
+		rowData.add(numRowInNumbers);// rowNumber
 
 		rowData.add(flashName);
 		toolTipFlashFile.add(numRowInCampaign, flashURI);
 
 		if (checkPreviousResults) {
-			// check for previous results
-			//			List<JatkStepAnalysisResult> results = new ArrayList<JatkStepAnalysisResult>();
-			//			List<IAnalysisResultsManager> arManagers= Matos.getInstance().getAnalysisResultsManagers();
-			//			for (IAnalysisResultsManager arManager : arManagers) {
-			//				JatkStepAnalysisResult rs = (JatkStepAnalysisResult)arManager.getPreviousAnalysisResult(flashStep);
-			//				if (rs!=null) {
-			//					results.add(rs);
-			//				}
-			//			}
-
-			// looking at retreived results
-			StepAnalysisResult sar = null;
-			/*	if (results.size()==1) {
-				sar = results.get(0);
-			} else if (results.size()>1) { 
-				// case of several Analysis Results Manager. Should not arrived...
-				// TODO sort dy date and use the younger
-				Out.log.println("More than one previous analysis result retreived. Nothing done...");
-				//javastep.updateLastAnalysisResult(results.get(0));
+			// Configuration column
+			if (null != flashStep.getXmlfilepath()) {
+				File configfile = new File(flashStep.getXmlfilepath());
+				rowData.add(configfile.getName());
 			} else {
-				// no results... 
-			}*/
-
-			if (sar!=null) {
-				flashStep.updateLastAnalysisResult(sar);
-				String toolTip =sar.toHTML(flashStep);
-				boolean modified = toolTip.indexOf("red")>0;
-				rowData.add(modified?"M":""); //Modified column
-				toolTipModified.add(numRowInCampaign, toolTip);
-
-				if (   sar.getVerdict().equals(Step.verdictAsString.get(Verdict.PASSED)) 
-						|| sar.getVerdict().equals(Step.verdictAsString.get(Verdict.FAILED)) ) { 
-					rowData.add( sar.getVerdict() ); //Verdict column
-					rowData.add( sar.getComment() ); //Comments column
-					String repPath = sar.getReportPath();
-					//					if ((repPath==null)||(repPath.equals(""))) {
-					//					repPath = rs.report.getAbsolutePath();
-					//					}
-					toolTipReport.add(numRowInCampaign, repPath);
-				} else { // verdict is 'Skipped'
-					rowData.add( sar.getVerdict()+": "+sar.getReason());
-					toolTipReport.add(numRowInCampaign, sar.getReason());
-				}
-			} else {
-				//Configuration column
-				if(null != flashStep.getXmlfilepath()){
-					File configfile = new File(flashStep.getXmlfilepath());
-					rowData.add(configfile.getName()); 
-				}
-				else{
-					PhoneInterface phone = AutomaticPhoneDetection.getInstance().getDevice();
-					String defaultConfigFileName = Configuration.getInstance().getDefaultConfig().get(phone.getClass().getName());
-					if (defaultConfigFileName != null){
-						rowData.add(defaultConfigFileName);
-						File file = new File(Configuration.defaultPhoneConfigPath+defaultConfigFileName);
-						flashStep.setXmlfilepath(file.toString());
-					}
-					else 
-						rowData.add(NOT_SELECTED);
-				}
-
-				rowData.add(""); //Modified column
-				toolTipModified.add(numRowInCampaign, "");
-				rowData.add(""); //Verdict column
-				rowData.add( "" ); //Comments column
-				toolTipReport.add(numRowInCampaign, "");
+				PhoneInterface phone = AutomaticPhoneDetection.getInstance().getDevice();
+				String defaultConfigFileName = Configuration.getInstance().getDefaultConfig()
+						.get(phone.getClass().getName());
+				if (defaultConfigFileName != null) {
+					rowData.add(defaultConfigFileName);
+					File file = new File(Configuration.defaultPhoneConfigPath
+							+ defaultConfigFileName);
+					flashStep.setXmlfilepath(file.toString());
+				} else
+					rowData.add(NOT_SELECTED);
 			}
+
+			rowData.add(""); // Modified column
+			toolTipModified.add(numRowInCampaign, "");
+			rowData.add(""); // Verdict column
+			rowData.add(""); // Comments column
+			toolTipReport.add(numRowInCampaign, "");
+
 		}
 
-		// TODO implementation of complete view
-		/*if (completeView){
-			int numCid = CoreGUI.cidTable.getNumCIDFromGUI(flashstep.id_cid);
-			if (numCid == -1){
-				rowData.add("");//editor's list number
-			}else{
-				rowData.add(new Integer(numCid).toString());//editor's list number
-			}
-			rowData.add(flashStep.cidName);
-			rowData.add(flashStep.sms);
-			rowData.add(flashStep.httpAuthorized);
-			rowData.add(flashStep.service);
-			rowData.add(flashStep.version);
-			rowData.add(flashStep.terminal);
-		}*/
 		model.insertRow(rowNumberInGUI, rowData);
 		campaign.add(numRowInCampaign, flashStep);
 		if (selectIt) {
 			selectARow(rowNumberInGUI);
 		}
-
 	}
 
-	/* (non-Javadoc)
+	/*
+	 * (non-Javadoc)
+	 * 
 	 * @see com.orange.atk.atkUI.coregui.CheckListTable#clear()
 	 */
 	@Override
 	public void clear() {
-		if (table.getRowCount()>0) { /// if needed ...
+		if (table.getRowCount() > 0) { // / if needed ...
 			campaign = new JatkCampaign();
 
 			model = new FlashCheckListTableModel();
@@ -917,13 +687,17 @@ public class JatkCheckListTable extends CheckListTable {
 			model.addColumn("Comments");
 			model.addColumn("Analyser");
 
-			//Set up column sizes.
+			// Set up column sizes.
 			model.initColumnSizes(model, table, NUMBER_OF_COLUMN);
 		}
 	}
 
-	/* (non-Javadoc)
-	 * @see com.orange.atk.atkUI.coregui.CheckListTable#updateAllAfterRemoving(java.util.Vector)
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see
+	 * com.orange.atk.atkUI.coregui.CheckListTable#updateAllAfterRemoving(java
+	 * .util.Vector)
 	 */
 	@Override
 	public void updateAllAfterRemoving(Vector<Integer> campRemovedRows) {
@@ -944,79 +718,71 @@ public class JatkCheckListTable extends CheckListTable {
 		CoreGUIPlugin.mainFrame.updateButtons();
 	}
 
-
-
-	/* (non-Javadoc)
-	 * @see com.orange.atk.atkUI.coregui.CheckListTable#updateStep(com.orange.atk.atkUI.corecli.Step)
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see
+	 * com.orange.atk.atkUI.coregui.CheckListTable#updateStep(com.orange.atk
+	 * .atkUI.corecli.Step)
 	 */
 	@Override
 	public void updateStep(Step step) {
-		Step flashStep = (Step)step;
+		Step flashStep = (Step) step;
 
-		int index_in_campaign = getCampaign().indexOf(step);
-		int index_in_table = getIndexInTable(index_in_campaign);
-		centerRow(index_in_table);
-
-		// gets back previous results for the step
-		List<JatkStepAnalysisResult> results = new ArrayList<JatkStepAnalysisResult>();
-		/*List<IAnalysisResultsManager> arManagers= Matos.getInstance().getAnalysisResultsManagers();
-		for (IAnalysisResultsManager arManager : arManagers) {
-			JatkStepAnalysisResult rs = (JatkStepAnalysisResult)arManager.getPreviousAnalysisResult(flashStep);
-			if (rs!=null) {
-				results.add(rs);
-			}
-		}*/
-		// looking at retreived results
-		if (results.size()==1) {
-			flashStep.updateLastAnalysisResult(results.get(0));
-		} else if (results.size()>1) { 
-			// case of several Analysis Results Manager. Should not arrived...
-			// TODO sort dy date and use the younger
-			Out.log.println("More than one previous analysis result retreived. Nothing done...");
-			//flashStep.updateLastAnalysisResult(results.get(0));
-		} else {
-			// no results... nothing to do
-		}
+		int indexInCampaign = getCampaign().indexOf(step);
+		int indexInTable = getIndexInTable(indexInCampaign);
+		centerRow(indexInTable);
 
 		Verdict userVerdict = flashStep.getUserVerdict();
 		if (userVerdict != Verdict.NONE) {
 			if (userVerdict == Verdict.PASSED || userVerdict == Verdict.FAILED) {
-				model.setValueAt(Step.verdictAsString.get(userVerdict), index_in_table, COLUMN_VERDICT);
+				model.setValueAt(Step.verdictAsString.get(userVerdict), indexInTable,
+						COLUMN_VERDICT);
 				String repPath = flashStep.getOutFilePath();
-				toolTipReport.set(index_in_campaign, repPath);
-			} else { //verdict is 'skipped'
-				if (flashStep.getSkippedMessage() != null && flashStep.getSkippedMessage().length() != 0) {
-					model.setValueAt(Step.verdictAsString.get(userVerdict) + ": " + flashStep.getSkippedMessage(), index_in_table, COLUMN_VERDICT);
-					toolTipReport.set(index_in_campaign, flashStep.getSkippedMessage());
+				toolTipReport.set(indexInCampaign, repPath);
+			} else { // verdict is 'skipped'
+				if (flashStep.getSkippedMessage() != null
+						&& flashStep.getSkippedMessage().length() != 0) {
+					model.setValueAt(
+							Step.verdictAsString.get(userVerdict) + ": "
+									+ flashStep.getSkippedMessage(), indexInTable, COLUMN_VERDICT);
+					toolTipReport.set(indexInCampaign, flashStep.getSkippedMessage());
 				} else {
-					model.setValueAt(Step.verdictAsString.get(userVerdict), index_in_table, COLUMN_VERDICT);
+					model.setValueAt(Step.verdictAsString.get(userVerdict), indexInTable,
+							COLUMN_VERDICT);
 				}
 			}
 		} else {
 			Verdict verdict = flashStep.getVerdict();
-			if (verdict == Verdict.PASSED || verdict == Verdict.FAILED){
-				model.setValueAt(Step.verdictAsString.get(verdict), index_in_table, COLUMN_VERDICT);
+			if (verdict == Verdict.PASSED || verdict == Verdict.FAILED) {
+				model.setValueAt(Step.verdictAsString.get(verdict), indexInTable, COLUMN_VERDICT);
 				String repPath = flashStep.getOutFilePath();
-				toolTipReport.set(index_in_campaign, repPath);
+				toolTipReport.set(indexInCampaign, repPath);
 			} else if (verdict == Verdict.NONE) {
-				model.setValueAt(Step.verdictAsString.get(verdict), index_in_table, COLUMN_VERDICT);
+				model.setValueAt(Step.verdictAsString.get(verdict), indexInTable,
+						COLUMN_VERDICT);
 			} else { // verdict is 'Skipped'
-				if (flashStep.getSkippedMessage() != null && flashStep.getSkippedMessage().length() != 0) {
-					model.setValueAt(Step.verdictAsString.get(verdict) + ": " + flashStep.getSkippedMessage(), index_in_table, COLUMN_VERDICT);
-					toolTipReport.set(index_in_campaign, flashStep.getSkippedMessage());
+				if (flashStep.getSkippedMessage() != null
+						&& flashStep.getSkippedMessage().length() != 0) {
+					model.setValueAt(
+							Step.verdictAsString.get(verdict) + ": "
+									+ flashStep.getSkippedMessage(), indexInTable,
+							COLUMN_VERDICT);
+					toolTipReport.set(indexInCampaign, flashStep.getSkippedMessage());
 				} else {
-					model.setValueAt(Step.verdictAsString.get(verdict), index_in_table, COLUMN_VERDICT);
+					model.setValueAt(Step.verdictAsString.get(verdict), indexInTable,
+							COLUMN_VERDICT);
 				}
 			}
 		}
 
 		StepAnalysisResult sar = flashStep.getLastAnalysisResult();
 		String toolTip = "";
-		if (sar!=null) {
+		if (sar != null) {
 			toolTip = sar.toHTML(flashStep);
-			boolean modified = toolTip.indexOf("red")>0;
-			model.setValueAt(modified?"M":"", index_in_table, COLUMN_MODIFIED);
-			toolTipModified.set(index_in_campaign, toolTip);
+			boolean modified = toolTip.indexOf("red") > 0;
+			model.setValueAt(modified ? "M" : "", indexInTable, COLUMN_MODIFIED);
+			toolTipModified.set(indexInCampaign, toolTip);
 		}
 
 	}
@@ -1024,109 +790,72 @@ public class JatkCheckListTable extends CheckListTable {
 	/**
 	 * The model for this table for.
 	 */
-	private  class FlashCheckListTableModel extends CheckListTableModel{
+	private class FlashCheckListTableModel extends CheckListTableModel {
 		/**
 		 * 
 		 */
 		private static final long serialVersionUID = 1L;
 
 		public boolean isCellEditable(int row, int col) {
-			if (col == COLUMN_COMMENTS ||col ==COLUMN_PHONECONFIG){
+			if (col == COLUMN_COMMENTS || col == COLUMN_PHONECONFIG) {
 				return true;
 			}
 			return false;
 		}
 
 		@SuppressWarnings("unchecked")
-		public void moveRow(SortedSet <Integer> campaignIndexRemovedRows, int rowIndexDst) {
+		public void moveRow(SortedSet<Integer> campaignIndexRemovedRows, int rowIndexDst) {
 
 			Iterator<Integer> it = campaignIndexRemovedRows.iterator();
-			Vector addvect =new Vector();
-			int index =0;
-			while (it.hasNext()){
+			Vector addvect = new Vector();
+			int index = 0;
+			while (it.hasNext()) {
 				int rowIndexSrc = it.next();
-				Vector r =(Vector) dataVector.get(rowIndexSrc+index);
+				Vector r = (Vector) dataVector.get(rowIndexSrc + index);
 				addvect.add(r);
-				model.removeRow(rowIndexSrc+index);   
+				model.removeRow(rowIndexSrc + index);
 				index--;
 			}
 
-
-			//add
-			if(rowIndexDst<campaignIndexRemovedRows.first())
-			{
-				for(int i=0;i<addvect.size();i++)
-				{
-					Vector r =(Vector) addvect.get(i);
-					model.insertRow(rowIndexDst+i, r);
+			// add
+			if (rowIndexDst < campaignIndexRemovedRows.first()) {
+				for (int i = 0; i < addvect.size(); i++) {
+					Vector r = (Vector) addvect.get(i);
+					model.insertRow(rowIndexDst + i, r);
 				}
 
+			} else {
+				for (int i = 0; i < addvect.size(); i++) {
+					Vector r = (Vector) addvect.get(i);
+					model.insertRow(rowIndexDst - campaignIndexRemovedRows.size() + 1 + i, r);
 
-			}
-			else
-			{
-				for(int i=0;i<addvect.size();i++)
-				{
-					Vector r =(Vector) addvect.get(i);
-					model.insertRow(rowIndexDst-campaignIndexRemovedRows.size()+1+i, r);
-
-				} 
-				//dataVector.addAll(rowIndexDst-campaignIndexRemovedRows.size()+1,addvect);
+				}
+				// dataVector.addAll(rowIndexDst-campaignIndexRemovedRows.size()+1,addvect);
 			}
 
-
-			//update campaign
+			// update campaign
 			campaign.movesample(campaignIndexRemovedRows, rowIndexDst);
-			//order IHM
+			// order IHM
 			reorderrow();
-
-			//updateAllAfterRemoving(campaignIndexRemovedRows);
-
-			//Step tempstep =campaign.get(rowIndexSrc);
-			//addRow(tempstep, rowIndexDst, true, true);
-
-			//dataVector.add(rowIndexDst, r);
-			//fireTableRowsInserted(rowIndexDst, rowIndexDst);
-
-
-
-			/*opyoneRow(rowIndexSrc);
-				Vector<Integer> campaignIndexRemovedRows = new Vector<Integer>();
-
-				campaignIndexRemovedRows.add( getNumCampaign(rowIndexSrc) );
-				model.removeRow(rowIndexSrc);
-				updateAllAfterRemoving(campaignIndexRemovedRows);
-			        pasteatEnd();
-			        CoreGUIPlugin.mainFrame.updateButtons();
-			    	CoreGUIPlugin.mainFrame.setModified(true);
-			    	CoreGUIPlugin.mainFrame.updateContentTabsTitle();  
-
-			 */
-
-
-
-
 		}
 
-		public void reorderrow()	    
-		{
+		public void reorderrow() {
 
-			for(int i=0;i<dataVector.size();i++)
-			{
-				model.setValueAt(String.valueOf(i+1), i, COLUMN_NBROW) ;
+			for (int i = 0; i < dataVector.size(); i++) {
+				model.setValueAt(String.valueOf(i + 1), i, COLUMN_NBROW);
 			}
 
 		}
 	}
 
-
-
-	/* (non-Javadoc)
+	/*
+	 * (non-Javadoc)
+	 * 
 	 * @see com.orange.atk.atkUI.coregui.CheckListTable#isRowModified(int)
 	 */
 	@Override
 	public boolean isRowModified(int row) {
-		String m = (String)model.getValueAt(row, COLUMN_MODIFIED );
+		String m = (String) model.getValueAt(row, COLUMN_MODIFIED);
 		return !m.equals("");
 	}
 
@@ -1138,7 +867,9 @@ public class JatkCheckListTable extends CheckListTable {
 		this.toolTipFlashFile = toolTipFlashFile;
 	}
 
-	/* (non-Javadoc)
+	/*
+	 * (non-Javadoc)
+	 * 
 	 * @see com.orange.atk.atkUI.coregui.CheckListTable#getNumColumnVerdict()
 	 */
 	@Override
@@ -1148,15 +879,19 @@ public class JatkCheckListTable extends CheckListTable {
 
 	/*
 	 * (non-Javadoc)
+	 * 
 	 * @see com.orange.atk.atkUI.coregui.CheckListTable#getValueAt(int)
 	 */
 	public String getValueAt(int numRow) {
-		return (String)model.getValueAt(numRow, COLUMN_NBROW);
+		return (String) model.getValueAt(numRow, COLUMN_NBROW);
 	}
 
 	private boolean enabledUserAction = true;
-	/* (non-Javadoc)
-	 * @see com.orange.atk.atkUI.coregui.CheckListTable#enableUserActions(boolean)
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see
+	 * com.orange.atk.atkUI.coregui.CheckListTable#enableUserActions(boolean)
 	 */
 	@Override
 	public void enableUserActions(boolean b) {
